# nlohmann_json

./: .bazelrc  .dotstop.dot  .gitattributes  .gitignore  ChangeLog.md  MODULE.bazel  README.md  versions.json
.devcontainer/S-CORE/: Dockerfile  post_create_script.sh  requirements.in  requirements.txt
.dotstop_extensions/: README.md  data_store.py  references.py  validators.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: coverage_gate.yml  docs.yml  parent-workflow.yml  pr_count_gate.yml  publish_documentation.yml  test_publication.yml  test_trudag_extensions.yml  ubuntu.yml
TSF/: MemoryEfficientTestResultData.db  README.md  TrustableScoring.db  misbehaviours.md
TSF/data_storage/: MemoryEfficientTestResultData_2025-11.db  MemoryEfficientTestResultData_2026-01-21.db  TrustableScoring_2026-01-26.db
TSF/docs/: STPA_diagram_nlohmann.drawio  ci_failure_rate_analysis.md  list_of_test_environments.md  nlohmann_closed_misbehaviours.md  nlohmann_runtime_and_memory_analysis.md  risk_analysis.md  risk_analysis.rst  third_party_tools_assessment.md
TSF/docs/introduction/: index.rst
TSF/scripts/: README.md  capture_test_data.py  capture_test_data_memory_sensitive.py  debug_trudag_state.sh  generate_list_of_misbehaviours.py  generate_report.sh  test_scripts.py
TSF/trustable/assertions/: TA-ANALYSIS.md  TA-ANALYSIS_CONTEXT.md  TA-BEHAVIOURS-CHECKLIST.md  TA-BEHAVIOURS.md  TA-BEHAVIOURS_CONTEXT.md  TA-CONFIDENCE.md  TA-CONFIDENCE_CONTEXT.md  TA-CONSTRAINTS-CHECKLIST.md  TA-CONSTRAINTS.md  TA-CONSTRAINTS_CONTEXT.md  TA-DATA.md  TA-DATA_CONTEXT.md  TA-FIXES.md  TA-FIXES_CONTEXT.md  TA-INDICATORS-CHECKLIST.md  TA-INDICATORS.md  TA-INDICATORS_CONTEXT.md  TA-INPUTS.md  TA-INPUTS_CONTEXT.md  TA-ITERATIONS.md  TA-ITERATIONS_CONTEXT.md  TA-METHODOLOGIES-CHECKLIST.md  TA-METHODOLOGIES.md  TA-METHODOLOGIES_CONTEXT.md  TA-MISBEHAVIOURS-CHECKLIST.md  TA-MISBEHAVIOURS.md  TA-MISBEHAVIOURS_CONTEXT.md  TA-RELEASES.md  TA-RELEASES_CONTEXT.md  TA-SUPPLY_CHAIN.md  TA-SUPPLY_CHAIN_CONTEXT.md  TA-TESTS-CHECKLIST.md  TA-TESTS.md  TA-TESTS_CONTEXT.md  TA-UPDATES.md  TA-UPDATES_CONTEXT.md  TA-VALIDATION.md  TA-VALIDATION_CONTEXT.md
TSF/trustable/assumptions-of-use/: AOU-01.md  AOU-02.md  AOU-03.md  AOU-04.md  AOU-05.md  AOU-07.md  AOU-08.md  AOU-09.md  AOU-11.md  AOU-14.md  AOU-15.md  AOU-16.md  AOU-17.md  AOU-18.md  AOU-19.md  AOU-20.md  AOU-21.md  AOU-22.md  AOU-23.md  AOU-24.md  AOU-27.md  AOU-28.md  AOU-29.md  AOU-30.md  AOU-31.md
TSF/trustable/expectations/: JLEX-01.md  JLEX-02.md
TSF/trustable/no-json-faults/: NJF-01.md  NJF-02.md  NJF-03.md  NJF-04.md  NJF-05.1.md  NJF-05.2.md  NJF-05.3.md  NJF-05.4.md  NJF-05.5.md  NJF-05.6.0.md  NJF-05.6.md  NJF-05.7.1.md  NJF-05.7.2.md  NJF-05.7.md  NJF-06.1.md  NJF-06.2.md  NJF-06.3.md  NJF-06.4.1.md  NJF-06.4.2.md  NJF-06.4.3.md  NJF-06.4.md  NJF-06.5.1.md  NJF-06.5.2.md  NJF-06.5.md  NJF-06.6.0.md  NJF-06.6.md  NJF-06.7.1.md  NJF-06.7.2.md  NJF-06.7.md  NJF-07.1.md  NJF-07.2.md  NJF-07.3.md  NJF-07.4.md  NJF-07.5.md  NJF-07.6.md  NJF-07.7.md  NJF-07.8.md  NJF-07.9.md  NJF-07.md  NJF-08.1.md  (+23 more)
TSF/trustable/no-parsing-faults/: NPF-01.1.md  NPF-01.2.md  NPF-01.3.md  NPF-01.4.md  NPF-01.5.md  NPF-02.1.md  NPF-02.10.md  NPF-02.11.md  NPF-02.12.md  NPF-02.2.md  NPF-02.3.md  NPF-02.4.md  NPF-02.5.md  NPF-02.6.md  NPF-02.7.md  NPF-02.8.md  NPF-02.9.md  NPF-02.md  NPF-03.1.md  NPF-03.2.md  NPF-03.3.md  NPF-03.4.md  NPF-03.5.md  NPF-03.6.md  NPF-03.7.md  NPF-03.md  NPF-04.1.md  NPF-04.2.md  NPF-04.3.md  NPF-04.4.md  NPF-04.md  NPF-05.1.md  NPF-05.2.md  NPF-05.3.md  NPF-06.1.md  NPF-06.2.md  NPF-06.3.md  NPF-06.4.md  NPF-07.1.md  NPF-07.2.md  (+1 more)
TSF/trustable/parse-json-data/: PJD-01.md  PJD-02.md  PJD-04.md
TSF/trustable/statements/: JLS-01.md  JLS-02.md  JLS-03.md  JLS-04.md  JLS-05.md  JLS-06.md  JLS-07.md  JLS-08.md  JLS-09.md  JLS-10.md  JLS-11.md  JLS-12.md  JLS-13.md  JLS-14.md  JLS-16.md  JLS-17.md  JLS-18.md  JLS-19.md  JLS-20.md  JLS-22.md  JLS-23.md  JLS-24.md  JLS-25.md  JLS-26.md  JLS-27.md  JLS-28.md  JLS-29.md  JLS-30.md  JLS-31.md  JLS-32.md  JLS-33.md  JLS-34.md  JLS-35.md  JLS-36.md  JLS-37.md  JLS-38.md  JLS-40.md  JLS-41.md  JLS-42.md  JLS-43.md  (+30 more)
TSF/trustable/tenets/: TT-CONFIDENCE.md  TT-EXPECTATIONS.md  TT-RESULTS.md
TSF/trustable/throw-ill-formed-json/: TIJ-01.1.md  TIJ-01.2.md  TIJ-02.1.md  TIJ-02.2.md  TIJ-02.3.md  TIJ-02.4.md  TIJ-02.5.md  TIJ-03.1.md  TIJ-03.2.md  TIJ-03.3.md  TIJ-03.4.md  TIJ-03.5.md  TIJ-04.1.md  TIJ-04.2.md  TIJ-04.3.md  TIJ-05.1.md  TIJ-05.2.md  TIJ-05.3.md  TIJ-05.4.md  TIJ-05.5.md
TSF/trustable/well-formed-json/: WFJ-04.md  WFJ-06.md  WFJ-09.md
cmake/: ci.cmake  download_test_data.cmake  gcc_flags.cmake
include/nlohmann/: json.hpp
include/nlohmann/detail/: json_custom_base_class.hpp  value_t.hpp
main/: ci_failure_rate_analysis.html  concept.html  genindex.html  index.html  list_of_test_environments.html  nlohmann_closed_misbehaviours.html  nlohmann_misbehaviours_comments.html  nlohmann_runtime_and_memory_analysis.html  non_reproducible_tests.html  objects.inv  report.html  risk_analysis.html  search.html  searchindex.js  third_party_tools_assessment.html
main/_sources/: ci_failure_rate_analysis.md.txt  nlohmann_closed_misbehaviours.md.txt  nlohmann_runtime_and_memory_analysis.md.txt  non_reproducible_tests.md.txt  third_party_tools_assessment.md.txt
main/_sources/introduction/: index.rst.txt
main/introduction/: index.html
single_include/nlohmann/: json.hpp
tests/src/: unit-iterators1.cpp  unit-regression1.cpp
(+50 files in other folders)
