# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(name = "score_nlohmann_json")

bazel_dep(name = "rules_license", version = "1.0.0")


bazel_dep(name = "rules_python", version = "1.8.3", dev_dependency = True)

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

## Custom Module Loading

bazel_dep(name = "score_docs_as_code", version = "3.0.0")
bazel_dep(name = "score_tooling", version = "1.1.2", dev_dependency = True)

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.16")

# C/C++ toolchains
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.3.1", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain",
    "score_gcc_aarch64_toolchain",
    "score_qcc_aarch64_toolchain",
)

# Dash license checker
bazel_dep(name = "score_dash_license_checker", version = "0.1.2", dev_dependency = True)

bazel_dep(name = "score_bazel_platforms", version = "0.1.1")
